svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ajaydabeconsultancy-website
spec:
  selector:
    app: ajaydabeconsultancy-website
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 82
