ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations: nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /consultancy
         pathType: Prefix
         backend:
           service:
             name: ajaydabeconsultancy-website
             port:
                number: 82
